fixed bug in css which resulted in profile banner not appearing at all on smaller screens

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,7 +165,9 @@ input, textarea {
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   background-color: white;
-  min-height: 300px;
+  height: 360px;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-banner {
@@ -179,7 +181,7 @@ input, textarea {
   height: 70%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
+  /* grid-template-rows: 1fr 1fr; */
 }
 
 .profile-pic-container {
